=========================
Change log for tl.eggdeps
=========================

0.4 (unreleased)
================


0.3.1 (2008-05-12)
==================

Features:
  - Added an option --version-specs (-s) for printing complex version
    specifications in a requirements list. They take into account the
    intersection of all version requirements for a particular distribution,
    but disregard extras completely for the time being.

0.3 (2008-03-29)
================

Features:
  - added an option --once (-1) for printing each distribution only once in
    plain text output

  - added an option --terse (-t) for suppressing hints at subtrees that are
    not printed in order to avoid duplication in plain text output

  - added an option --requirements (-r) for printing a list of requirement
    specifications from the dependency graph

Organisation:
  - added tests for output modules


0.2.2 (2008-03-10)
==================

Bug fixes:
  - In dot output, quote distribution names instead of escaping some
    characters. Escaping only '.' was not sufficient - thanks to
    Phillip J. Eby for the bug report.


0.2.1 (2007-08-06)
==================

User visible:
  - renamed the --print-version option to --version-numbers

  - In plain text output, print the names of extras above their dependencies
    instead of next to them, which happened to look as if they belonged to the
    dependency specifications themselves.

  - documented the meaning of annotations and colors in the output

  - made the script entry point recognize option defaults which can be set
    using the arguments option of the buildout egg recipe, for example

Bug fixes:
  - In plain text output, made sure that subtrees are printed at a path with
    extra dependencies occuring as late as possible, if at all.

Organisation:
  - improved example buildout configuration

  - added tests for graph reduction


0.2 (2007-07-31)
================

User visible:
  - improved documentation
