@@ -5,6 +5,11 @@ Change log for tl.eggdeps
 0.4 (unreleased)
 ================
 
+Features:
+  - Added an API for including a comment in a generated dot file, use it to
+    record the arguments eggdeps was called with. Thanks to Christian
+    Zagrodnick for the suggestion.
+
 
 0.3.1 (2008-05-12)
 ==================
@@ -14,6 +19,7 @@ Features:
     specifications in a requirements list. They take into account the
     intersection of all version requirements for a particular distribution,
     but disregard extras completely for the time being.
+
 
 0.3 (2008-03-29)
 ================
